# dl

./: app.py  main.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: main.js
