[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "twilio>=9.4.5",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
